feat(knowledge): 增加知识库维度元数据功能 & 元数据过滤
